--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,32 +4,35 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.31",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
-    "expo-router": "~4.0.17",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-linking": "~7.0.5",
-    "expo-constants": "~17.0.5",
-    "react-redux": "^9.1.2",
-    "@tanstack/react-query": "^5.56.2",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "@reduxjs/toolkit": "^2.2.7",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "yup": "^1.4.0",
+    "@react-native-picker/picker": "^2.9.0",
+    "@react-navigation/native": "^6.1.18",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
+    "expo": "~52.0.35",
+    "expo-constants": "~17.0.5",
+    "expo-image-picker": "~16.0.5",
+    "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.6",
+    "expo-router": "~4.0.17",
+    "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "mime": "^4.0.4",
-    "expo-image-picker": "~16.0.5",
-    "@react-native-picker/picker": "^2.9.0",
-    "axios": "^1.7.7"
+    "react": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
