--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "^2.9.0",
-    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.2",
@@ -24,6 +24,7 @@
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.7",
     "mime": "^4.0.4",
     "react": "18.3.1",
     "react-native": "0.76.7",
