--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "expo": "~52.0.35",
     "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.12",
     "expo-image-picker": "~16.0.5",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.6",
@@ -29,10 +30,13 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-charts": "^1.4.58",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
