--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "expo-location": "^18.0.6",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.7.3",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.7",
     "mime": "^4.0.4",
