--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^7.7.0",
-    "@react-native-picker/picker": "^2.9.0",
-    "@react-navigation/native": "^6.1.18",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
@@ -22,15 +22,14 @@
     "expo-dev-client": "~5.0.12",
     "expo-image-picker": "~16.0.5",
     "expo-linking": "~7.0.5",
-    "expo-location": "^18.0.6",
+    "expo-location": "~18.0.10",
+    "expo-notifications": "^0.29.14",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.7.3",
     "formik": "^2.4.6",
-    "framer-motion": "^12.4.7",
-    "mime": "^4.0.4",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.58",
     "react-native-linear-gradient": "^2.8.3",
@@ -38,7 +37,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "^15.8.0",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
